--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@ padding: 5px 20px;
 }
 .card{border: none;
 background-color: #F0FFF0;
-border-radius: 20px;
+border-radius: 10px;
+
 }
 .card img{width: 50%;}
-.card:hover{background-color: white;}
+.card:hover{background-color: white;
+box-shadow: 5px 5px 10px lightgray;}
